--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ color: var(--text-color1)
   }
 
 header {
-color: black;
+
 font-weight: 500;
 font-size: 14px;
 line-height: 1.1;
@@ -36,22 +36,14 @@ font-size: 26px;
 line-height: 1.2
 
 }
-.logo-header {
 
+.logo-header {
 color: black
 font-family: 'Raleway'
 font-weight: 700;
 font-size: 26px;
 line-height: 1.2
 
-}
-
-.nav-link:hover {
-color: var(--brand-color);
-}
-
-.contact-link:hover {
-color: var(--brand-color)
 }
 
 .address-link{
@@ -68,6 +60,14 @@ color: white;
  color: var(--text-color2);
 }
 
+.contact-link:hover {
+color: var(--brand-color)
+}
+
+.nav-link:hover {
+color: var(--brand-color);
+}
+
 
 a {
 text-decoration: none;
@@ -76,7 +76,7 @@ color:black;
 
 footer {
   background-color: var(--background-color1);
-  color:white
+  color:var(--text-color2)
   font-weight:400;
   font-size: 14px;
   line-height: 1.7;
